<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_mesadetrabajo1"
        android:id="@+id/inputCodeLayout"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textColor="#ffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/escribacodigo"
            android:textColor="#ffff"
            android:textSize="14sp" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="30dp"
            app:pinHeight="48dp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="false"
            app:hint="0"
            app:inputType="number"
            app:password="false"/>

        <LinearLayout
            android:id="@+id/timer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Por favor espere "
                android:textColor="@color/white"
                android:textSize="13dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/timer"
                tools:text="0:30 "
                android:textSize="14dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/recibecodigo"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/corner_white_border"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/reenviar"
            android:textColor="@color/white"
            android:textSize="14dp" />
        <Button
            android:id="@+id/reenter_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/corner_white_border"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/enter_phone_number"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>

</RelativeLayout>